welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:11: error: type mismatch;
 found   : Unit
 required: Boolean
      return
      ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (compteur <- 1 to 6){
                ^